err/equip.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/equip'...
Listing './lib/python3.5/site-packages/equip/bytecode'...
Compiling './lib/python3.5/site-packages/equip/bytecode/code.py'...
***   File "./lib/python3.5/site-packages/equip/bytecode/code.py", line 109
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/equip/rewriter'...
Compiling './lib/python3.5/site-packages/equip/rewriter/simple.py'...
***   File "./lib/python3.5/site-packages/equip/rewriter/simple.py", line 268
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/equip/utils'...
Compiling './lib/python3.5/site-packages/equip/utils/files.py'...
***   File "./lib/python3.5/site-packages/equip/utils/files.py", line 39
    except IOError, error:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/equip/visitors'...
Listing './lib/python3.5/site-packages/equip-0.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
